AWS/VPC.template
{  
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"This Template will create VPC, Subnet and resources needed for VPC  ",
   "Parameters":{  
      "TagValue1":{  
         "Description":"The Project Name",
         "Type":"String"
      },
      "TagValue2":{  
         "Description":"The Name of Environment",
         "Type":"String",
         "AllowedValues":[  
            "Development",
            "Staging",
            "Production"
         ]
      },
      "CIDR":{  
         "Description":"The IP address range that you'll use for your VPC. I.e. 10.0.0.0/16",
         "Type":"String",
         "AllowedPattern" : "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
      },
      "PublicCidrBlockA":{  
         "Description":"The IP address range for Public Subnet A",
         "Type":"String",
         "AllowedPattern" : "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
      
      },
      "Region":{  
         "Description":"The region to launch into",
         "Type":"String",
		 "AllowedValues": [  
            "us-east-1",
            "us-west-2",
            "ap-southeast-2"
         ]
	  },
	  "PublicCidrBlockB":{  
         "Description":"The IP address range for Public Subnet B",
         "Type":"String",
         "AllowedPattern" : "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
      
      },
      "PrivateCidrBlockA":{  
         "Description":"The IP address range for Private Subnet A",
         "Type":"String",
         "AllowedPattern" : "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
      
      },
      "PrivateCidrBlockB":{  
         "Description":"The IP address range for Private Subnet B",
         "Type":"String",
         "AllowedPattern" : "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
      
      }
   },
   "Resources":{  
      "VPC":{  
         "Type":"AWS::EC2::VPC",
         "Properties":{  
            "CidrBlock":{  
               "Ref":"CIDR"
            },
            "EnableDnsSupport":"true",
            "EnableDnsHostnames":"true",
            "InstanceTenancy":"default",
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               }
            ]
         }
      },
      "PublicSubnet1":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Ref":"PublicCidrBlockA"
            },
            "MapPublicIpOnLaunch":"true",
            "AvailabilityZone":{  
				"Fn::Join" :[
				"",
				[
					{
						"Ref":"Region"
					},
					"a"
			   ]]
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               }
            ]
         }
      },
      "PublicSubnet2":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Ref":"PublicCidrBlockB"
            },
            "MapPublicIpOnLaunch":"true",
            "AvailabilityZone":{  
               "Fn::Join" :[
				"",
				[
					{
						"Ref":"Region"
					},
					"b"
			   ]]
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               }
            ]
         }
      },
      "InternetGateway":{  
         "Type":"AWS::EC2::InternetGateway",
         "Properties":{  
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               }
            ]
         }
      },
      "AttachGateway1":{  
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "InternetGatewayId":{  
               "Ref":"InternetGateway"
            }
         }
      },
      "NATA":{  
         "DependsOn":"AttachGateway1",
         "Type":"AWS::EC2::NatGateway",
         "Properties":{  
            "AllocationId":{  
               "Fn::GetAtt":[  
                  "EIP1",
                  "AllocationId"
               ]
            },
            "SubnetId":{  
               "Ref":"PublicSubnet1"
            }
         }
      },
      "EIP1":{  
         "Type":"AWS::EC2::EIP",
         "Properties":{  
            "Domain":"vpc"
         }
      },
	  "AttachGateway2":{  
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "InternetGatewayId":{  
               "Ref":"InternetGateway"
            }
         }
      },
      "NATB":{  
         "DependsOn":"AttachGateway2",
         "Type":"AWS::EC2::NatGateway",
         "Properties":{  
            "AllocationId":{  
               "Fn::GetAtt":[  
                  "EIP2",
                  "AllocationId"
               ]
            },
            "SubnetId":{  
               "Ref":"PublicSubnet2"
            }
         }
      },
      "EIP2":{  
         "Type":"AWS::EC2::EIP",
         "Properties":{  
            "Domain":"vpc"
         }
      },
      "PublicRouteTable":{  
         "Type":"AWS::EC2::RouteTable",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               },
               {  
                  "Key":"Network",
                  "Value":"Public"
               }
            ]
         }
      },
      "PublicRoute1":{  
         "Type":"AWS::EC2::Route",
         "DependsOn":"AttachGateway1",
         "Properties":{  
            "RouteTableId":{  
               "Ref":"PublicRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{  
               "Ref":"InternetGateway"
            }
         }
      },
      "PublicSubnetRouteTableAssociation1":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PublicSubnet1"
            },
            "RouteTableId":{  
               "Ref":"PublicRouteTable"
            }
         }
      },
      "PublicSubnetRouteTableAssociation2":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PublicSubnet2"
            },
            "RouteTableId":{  
               "Ref":"PublicRouteTable"
            }
         }
      },
      "PublicNetworkAcl":{  
         "Type":"AWS::EC2::NetworkAcl",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               },
               {  
                  "Key":"Network",
                  "Value":"Public"
               }
            ]
         }
      },
      "PublicSubnetNetworkAclAssociation1":{  
         "Type":"AWS::EC2::SubnetNetworkAclAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PublicSubnet1"
            },
            "NetworkAclId":{  
               "Ref":"PublicNetworkAcl"
            }
         }
      },
      "PublicSubnetNetworkAclAssociation2":{  
         "Type":"AWS::EC2::SubnetNetworkAclAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PublicSubnet2"
            },
            "NetworkAclId":{  
               "Ref":"PublicNetworkAcl"
            }
         }
      },
      "PrivateSubnet1":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Ref":"PrivateCidrBlockA"
            },
            "AvailabilityZone":{  
               "Fn::Join" :[
				"",
				[
					{
						"Ref":"Region"
					},
					"a"
			   ]]
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               }
            ]
         }
      },
      "PrivateSubnet2":{  
         "Type":"AWS::EC2::Subnet",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "CidrBlock":{  
               "Ref":"PrivateCidrBlockB"
            },
            "AvailabilityZone":{  
               "Fn::Join" :[
				"",
				[
					{
						"Ref":"Region"
					},
					"b"
			   ]]
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               }
            ]
         }
      },
      "PrivateRouteTableA":{  
         "Type":"AWS::EC2::RouteTable",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               },
               {  
                  "Key":"Network",
                  "Value":"Private"
               }
            ]
         }
      },
	  "PrivateRouteTableB":{  
         "Type":"AWS::EC2::RouteTable",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               },
               {  
                  "Key":"Network",
                  "Value":"Private"
               }
            ]
         }
      },
      "PrivateSubnetRouteTableAssociationA":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnet1"
            },
            "RouteTableId":{  
               "Ref":"PrivateRouteTableA"
            }
         }
      },
      "PrivateSubnetRouteTableAssociationB":{  
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnet2"
            },
            "RouteTableId":{  
               "Ref":"PrivateRouteTableB"
            }
         }
      },
      "PrivateNATRouteTableAssociationA":{  
         "Type":"AWS::EC2::Route",
         "Properties":{  
            "RouteTableId":{  
               "Ref":"PrivateRouteTableA"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "NatGatewayId":{  
               "Ref":"NATA"
            }
         }
      },
	  "PrivateNATRouteTableAssociationB":{  
         "Type":"AWS::EC2::Route",
         "Properties":{  
            "RouteTableId":{  
               "Ref":"PrivateRouteTableB"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "NatGatewayId":{  
               "Ref":"NATB"
            }
         }
      },
      "PrivateNetworkAcl":{  
         "Type":"AWS::EC2::NetworkAcl",
         "Properties":{  
            "VpcId":{  
               "Ref":"VPC"
            },
            "Tags":[  
               {  
                  "Key":"Project",
                  "Value":{  
                     "Ref":"TagValue1"
                  }
               },
               {  
                  "Key":"Environment",
                  "Value":{  
                     "Ref":"TagValue2"
                  }
               },
               {  
                  "Key":"Network",
                  "Value":"Private"
               }
            ]
         }
      },
      "PrivateSubnetNetworkAclAssociation1":{  
         "Type":"AWS::EC2::SubnetNetworkAclAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnet1"
            },
            "NetworkAclId":{  
               "Ref":"PrivateNetworkAcl"
            }
         }
      },
      "PrivateSubnetNetworkAclAssociation2":{  
         "Type":"AWS::EC2::SubnetNetworkAclAssociation",
         "Properties":{  
            "SubnetId":{  
               "Ref":"PrivateSubnet2"
            },
            "NetworkAclId":{  
               "Ref":"PrivateNetworkAcl"
            }
         }
      },
      "NetworkAclEntry1":{  
         "Type":"AWS::EC2::NetworkAclEntry",
         "Properties":{  
            "CidrBlock":"0.0.0.0/0",
            "Egress":"true",
            "Protocol":"-1",
            "RuleAction":"allow",
            "RuleNumber":"100",
            "NetworkAclId":{  
               "Ref":"PublicNetworkAcl"
            }
         }
      },
      "NetworkAclEntry2":{  
         "Type":"AWS::EC2::NetworkAclEntry",
         "Properties":{  
            "CidrBlock":"0.0.0.0/0",
            "Protocol":"-1",
            "RuleAction":"allow",
            "RuleNumber":"100",
            "NetworkAclId":{  
               "Ref":"PublicNetworkAcl"
            }
         }
      },
      "NetworkAclEntry3":{  
         "Type":"AWS::EC2::NetworkAclEntry",
         "Properties":{  
            "CidrBlock":"0.0.0.0/0",
            "Egress":"true",
            "Protocol":"-1",
            "RuleAction":"allow",
            "RuleNumber":"100",
            "NetworkAclId":{  
               "Ref":"PrivateNetworkAcl"
            }
         }
      },
      "NetworkAclEntry4":{  
         "Type":"AWS::EC2::NetworkAclEntry",
         "Properties":{  
            "CidrBlock":"0.0.0.0/0",
            "Protocol":"-1",
            "RuleAction":"allow",
            "RuleNumber":"100",
            "NetworkAclId":{  
               "Ref":"PrivateNetworkAcl"
            }
         }
      }
   },
   "Outputs":{  
      "VPCId":{  
         "Description":"VPCId of the newly created VPC",
         "Value":          {  
            "Ref":"VPC"
         }
      },
      "PublicSubnet1Id":{  
         "Description":"SubnetId of the public subnet",
         "Value":          {  
            "Ref":"PublicSubnet1"
         }
      },
      "PublicSubnet2Id":{  
         "Description":"SubnetId of the public subnet",
         "Value":          {  
            "Ref":"PublicSubnet2"
         }
      },
      "PrivateSubnet1Id":{  
         "Description":"SubnetId of the public subnet",
         "Value":          {  
            "Ref":"PrivateSubnet1"
         }
      },
      "PrivateSubnet2Id":{  
         "Description":"SubnetId of the public subnet",
         "Value":          {  
            "Ref":"PrivateSubnet2"
         }
      }
   }
}
